--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,42 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-  font-size: 12px;
+  font-size: 14px;
+  min-width: 74rem;
+  background-color: Darkgrey;
+}
+
+.view{
+  font-size: 22px;
+  color: red;
+
+}
+
+.view .desktop{
+  visibility: hidden;
+}
+
+.container{
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+@media (min-width: 800px) {
+  body {
+    font-size: 18px;
+  }
+  .container{
+    max-width: 74rem;
+    margin: auto;
+    background-color: white;
+  }
+  .view .mobile{
+    visibility: hidden;
+  }
+  .view .desktop{
+    visibility: visible;
+  }
 }
