--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,22 +6,30 @@ body {
   font-size: 14px;
   min-width: 74rem;
   background-color: Darkgrey;
+	background-image: url("mainart.jpg")
 }
 
 .view{
   font-size: 22px;
   color: red;
-
+	font-weight: bold;
 }
 
 .view .desktop{
   visibility: hidden;
+	text-align: center;
 }
 
 .container{
   background-color: white;
   border-radius: 10px;
   padding: 20px;
+	display: flex;
+	margin: auto;
+}
+
+img{
+	padding-right: 5px;
 }
 
 @media (min-width: 800px) {
