--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,8 @@
 
 body {
   font-size: 16px;
-  min-width: 74rem;
   background-color: Darkgrey;
-	background-image: url("mainart.jpg")
+	background: url("mainart.jpg")
 }
 
 .view{
@@ -26,9 +25,17 @@ body {
 	display: flex;
 	margin: auto;
 }
+.content{
+
+}
+h2{
+	margin-top: 0;
+}
 
 .image{
-	width: 20%;
+	width: 100%;
+	height: 100%;
+	display: flex;
 }
 
 img{
@@ -57,4 +64,10 @@ img{
   .view .desktop{
     visibility: visible;
   }
+
+	.image{
+		width: 300px;
+		height: 300px;
+		display: flex;
+	}
 }
